balls and puzzles part 1

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <body>
     <canvas id="root"></canvas>
     <img src="" alt="" id="sprites" />
+    <div class="debug-canvas-container"></div>
   </body>
 </html>
